--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
     </div>
 
     <!-- Nav Bar -->
-    <nav class="navbar bg-light navbar-expand-sm navbar-light text-center" id="nav-bar">
+    <nav class="navbar bg-light navbar-expand-sm navbar-light justify-content-center" id="nav-bar">
         <!-- Logo -->
-        <div id="logo">
-            <a href="index.html" class="navbar-brand">
+        <div id="logo" class="col-2 p-0">
+            <a href="../index.html" class="navbar-brand">
                 <img width="100%" src="rsc/logo/logo.png" alt="ATS Logo" />
             </a>
         </div>
@@ -82,15 +82,15 @@
         </button>
 
         <!-- Options Menu -->
-        <div class="collapse navbar-collapse col-10" id="collapsibleNavbar">
-            <ul class="navbar nav bar-expand-sm" id="options">
+        <div class="collapse navbar-collapse col-7 p-0" id="collapsibleNavbar">
+            <ul class="navbar nav bar-expand-sm p-0" id="options">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="pages/software.html">Software</a></li>
-                <li class="nav-item"><a class="nav-link" href="pages/hardware.html">Hardware</a></li>
-                <li class="nav-item"><a class="nav-link" href="pages/training.html">Training</a></li>
-                <li class="nav-item"><a class="nav-link" href="pages/licensing.html">Licensing</a></li>
-                <li class="nav-item"><a class="nav-link" href="pages/support.html">Support</a></li>
-                <li class="nav-item"><a class="nav-link" href="pages/contact.html">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="/pages/software.html">Software</a></li>
+                <li class="nav-item"><a class="nav-link" href="/pages/hardware.html">Hardware</a></li>
+                <li class="nav-item"><a class="nav-link" href="/pages/training.html">Training</a></li>
+                <li class="nav-item"><a class="nav-link" href="/pages/licensing.html">Licensing</a></li>
+                <li class="nav-item"><a class="nav-link" href="/pages/support.html">Support</a></li>
+                <li class="nav-item"><a class="nav-link" href="/pages/contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
