--- a/pages/support.html
+++ b/pages/support.html
@@ -63,7 +63,7 @@
     <!-- Nav Bar -->
     <nav class="navbar bg-light navbar-expand-sm navbar-light justify-content-center" id="nav-bar">
         <!-- Logo -->
-        <div id="logo">
+        <div id="logo" class="col-2 p-0">
             <a href="../index.html" class="navbar-brand">
                 <img width="100%" src="../rsc/logo/logo.png" alt="ATS Logo" />
             </a>
@@ -75,8 +75,8 @@
         </button>
 
         <!-- Options Menu -->
-        <div class="collapse navbar-collapse col-10" id="collapsibleNavbar">
-            <ul class="navbar nav bar-expand-sm" id="options">
+        <div class="collapse navbar-collapse col-7 p-0" id="collapsibleNavbar">
+            <ul class="navbar nav bar-expand-sm p-0" id="options">
                 <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="software.html">Software</a></li>
                 <li class="nav-item"><a class="nav-link" href="hardware.html">Hardware</a></li>
