--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
         <div class="collapse navbar-collapse col-7 p-0" id="collapsibleNavbar">
             <ul class="navbar nav bar-expand-sm p-0" id="options">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="/pages/software.html">Software</a></li>
-                <li class="nav-item"><a class="nav-link" href="/pages/hardware.html">Hardware</a></li>
-                <li class="nav-item"><a class="nav-link" href="/pages/training.html">Training</a></li>
-                <li class="nav-item"><a class="nav-link" href="/pages/licensing.html">Licensing</a></li>
-                <li class="nav-item"><a class="nav-link" href="/pages/support.html">Support</a></li>
-                <li class="nav-item"><a class="nav-link" href="/pages/contact.html">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="pages/software.html">Software</a></li>
+                <li class="nav-item"><a class="nav-link" href="pages/hardware.html">Hardware</a></li>
+                <li class="nav-item"><a class="nav-link" href="pages/training.html">Training</a></li>
+                <li class="nav-item"><a class="nav-link" href="pages/licensing.html">Licensing</a></li>
+                <li class="nav-item"><a class="nav-link" href="pages/support.html">Support</a></li>
+                <li class="nav-item"><a class="nav-link" href="pages/contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
