--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -107,22 +107,22 @@
     <!-- Contenedor principal-->
     <div class="container p-0 mb-5" id="container">
         <div class="row mt-5 mb-3">
-            <div class="col-6 col-md-2 text-center">
+            <div class="col-6 mb-2 mb-lg-0 col-md-2 text-center">
                 <button size="lg" class="btn btn-warning" id="todos">All items</button>
             </div>
-            <div class="col-6 col-md-2 text-center">
+            <div class="col-6 mb-2 mb-lg-0 col-md-2 text-center">
                 <button size="lg" class="btn btn-warning" id="signature_pads">Signature pads</b-button>
             </div>
-            <div class="col-6 col-md-2 text-center">
+            <div class="col-6 mb-2 mb-lg-0 col-md-2 text-center">
                 <b-button size="lg" class="btn btn-warning" id="scanners">Scanners</b-button>
             </div>
-            <div class="col-6 col-md-2  text-center">
+            <div class="col-6 mb-2 mb-lg-0 col-md-2  text-center">
                 <b-button size="lg" class="btn btn-warning" id="workstations">Work Stations</b-button>
             </div>
-            <div class="col-6 col-md-2  text-center">
+            <div class="col-6 mb-2 mb-lg-0 col-md-2  text-center">
                 <b-button size="lg" class="btn btn-warning" id="monitors">Monitors</b-button>
             </div>
-            <div class="col-6 col-md-2  text-center">
+            <div class="col-6 mb-2 mb-lg-0 col-md-2  text-center">
                 <b-button size="lg" class="btn btn-warning" id="laptops">Laptops</b-button>
             </div>
         </div>
@@ -131,11 +131,11 @@
         </div>
 
         <div id="modal">
-            <div class="container-fluid" id="modal-content">
+            <div class="container-fluid rounded" id="modal-content">
                 <div class="row">
-                    <div class="col-sm-12 col-md-12 col-xl-6" id="col-modal-img">
+                    <div class="col-12 col-xl-6" id="col-modal-img">
                     </div>
-                    <div class="col-sm-12 col-md-12 col-xl-6" id="col-modal-text">
+                    <div class="col-12 col-xl-6" id="col-modal-text">
                     </div>
                 </div>
             </div>
