--- a/pages/support.html
+++ b/pages/support.html
@@ -39,10 +39,10 @@
         <div class="row justify-content-center py-2">
             <div class="col-11 col-md-8">
                 <div class="row justify-content-between">
-                    <div class="col-5">
+                    <div class="col-7">
                         <p class="m-0"><strong>DOWNLOAD </strong> DEMO!</p>
                     </div>
-                    <div class="col-2 align-content-end">
+                    <div class="col-3 col-md-2 align-content-end">
                         <div class="row justify-content-between">
                             <a href="https://twitter.com/aztecataxes" target="_blank">
                                 <img src="../rsc/icons/twitter.svg" alt="twitter" />
@@ -61,9 +61,10 @@
     </div>
 
     <!-- Nav Bar -->
-    <nav class="navbar bg-light navbar-expand-sm navbar-light justify-content-center" id="nav-bar">
+    <nav class="navbar bg-light navbar-expand-sm navbar-light justify-content-between justify-content-md-center"
+        id="nav-bar">
         <!-- Logo -->
-        <div id="logo" class="col-2 p-0">
+        <div id="logo" class="col-7 col-md-2 p-0">
             <a href="../index.html" class="navbar-brand">
                 <img width="100%" src="../rsc/logo/logo.png" alt="ATS Logo" />
             </a>
@@ -116,8 +117,8 @@
         </div>
 
         <div class="row justify-content-center text-center m-0 mb-5">
-            <div class="col-8">
-                <div class="row align-items-center cont-info  p-5">
+            <div class="col-12 col-md-8">
+                <div class="row align-items-center cont-info p-2 py-5 rounded-0 p-md-5">
                     <div class="col-12 col-md-6">
                         <h2 class="titulo"><b>CALL US!</b></h2>
                     </div>
