--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -107,7 +107,7 @@
 
     <!-- Contenedor principal-->
     <div class="container p-0 mb-5" id="container">
-        <div class="row mt-5 mb-3">
+        <div class="row m-0 mt-5 mb-3">
             <div class="col-6 mb-2 mb-lg-0 col-md-2 text-center">
                 <button size="lg" class="btn btn-warning" id="todos">All items</button>
             </div>
@@ -115,20 +115,20 @@
                 <button size="lg" class="btn btn-warning" id="signature_pads">Signature pads</b-button>
             </div>
             <div class="col-6 mb-2 mb-lg-0 col-md-2 text-center">
-                <b-button size="lg" class="btn btn-warning" id="scanners">Scanners</b-button>
+                <button size="lg" class="btn btn-warning" id="scanners">Scanners</button>
             </div>
             <div class="col-6 mb-2 mb-lg-0 col-md-2  text-center">
-                <b-button size="lg" class="btn btn-warning" id="workstations">Work Stations</b-button>
+                <button size="lg" class="btn btn-warning" id="workstations">Work Stations</button>
             </div>
             <div class="col-6 mb-2 mb-lg-0 col-md-2  text-center">
-                <b-button size="lg" class="btn btn-warning" id="monitors">Monitors</b-button>
+                <button size="lg" class="btn btn-warning" id="monitors">Monitors</button>
             </div>
             <div class="col-6 mb-2 mb-lg-0 col-md-2  text-center">
-                <b-button size="lg" class="btn btn-warning" id="laptops">Laptops</b-button>
+                <button size="lg" class="btn btn-warning" id="laptops">Laptops</button>
             </div>
         </div>
 
-        <div class="row  justify-content-center" class="mt-5" id="prods">
+        <div class="row  m-0 justify-content-center" class="mt-5" id="prods">
         </div>
 
         <div id="modal">
@@ -221,16 +221,7 @@
         color: white;
     }
 
-    .cuadro {
-        box-shadow: 10px 10px 20px rgba(199, 199, 199, 0.2),
-            -10px -10px 20px rgba(199, 199, 199, 0.2),
-            10px -10px 20px rgba(255, 255, 255, 0.9),
-            -10px 10px 25px rgba(199, 199, 199, 0.9),
-            inset -1px 1px 2px rgba(255, 255, 255, 0.3),
-            inset 1px -1px 2px rgba(199, 199, 199, 0.5);
-        border-radius: 8px;
-        align-items: center;
-        justify-content: space-between;
-        text-align: center;
+    .sectionTitle h1 {
+        font-size: 2.5em;
     }
 </style>
