--- a/pages/licensing.html
+++ b/pages/licensing.html
@@ -1,10 +1,3 @@
-<!-- 
-    AZTECA TAX WEB
-    VERSION: 1.0
-    ÚLTIMA ACTUALIZACIÓN: 14/04/2023
-    ESTADO: Terminado
--->
-
 <!DOCTYPE html>
 <html>
 
@@ -47,10 +40,10 @@
         <div class="row justify-content-center py-2">
             <div class="col-11 col-md-8">
                 <div class="row justify-content-between">
-                    <div class="col-5">
+                    <div class="col-7">
                         <p class="m-0"><strong>DOWNLOAD </strong> DEMO!</p>
                     </div>
-                    <div class="col-2 align-content-end">
+                    <div class="col-3 col-md-2 align-content-end">
                         <div class="row justify-content-between">
                             <a href="https://twitter.com/aztecataxes" target="_blank">
                                 <img src="../rsc/icons/twitter.svg" alt="twitter" />
@@ -69,9 +62,10 @@
     </div>
 
     <!-- Nav Bar -->
-    <nav class="navbar bg-light navbar-expand-sm navbar-light justify-content-center" id="nav-bar">
+    <nav class="navbar bg-light navbar-expand-sm navbar-light justify-content-between justify-content-md-center"
+        id="nav-bar">
         <!-- Logo -->
-        <div id="logo" class="col-2 p-0">
+        <div id="logo" class="col-7 col-md-2 p-0">
             <a href="../index.html" class="navbar-brand">
                 <img width="100%" src="../rsc/logo/logo.png" alt="ATS Logo" />
             </a>
