--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
 
-    <link rel="icon" type="image/x-icon" href="/rsc/logo/logo.png" />
+    <link rel="icon" type="image/x-icon" href="rsc/logo/logo.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,10 +46,10 @@
         <div class="row justify-content-center py-2">
             <div class="col-11 col-md-8">
                 <div class="row justify-content-between">
-                    <div class="col-5">
+                    <div class="col-7">
                         <p class="m-0"><strong>DOWNLOAD </strong> DEMO!</p>
                     </div>
-                    <div class="col-2 align-content-end">
+                    <div class="col-3 col-md-2 align-content-end">
                         <div class="row justify-content-between">
                             <a href="https://twitter.com/aztecataxes" target="_blank">
                                 <img src="rsc/icons/twitter.svg" alt="twitter" />
@@ -68,9 +68,10 @@
     </div>
 
     <!-- Nav Bar -->
-    <nav class="navbar bg-light navbar-expand-sm navbar-light justify-content-center" id="nav-bar">
+    <nav class="navbar bg-light navbar-expand-sm navbar-light justify-content-between justify-content-md-center"
+        id="nav-bar">
         <!-- Logo -->
-        <div id="logo" class="col-2 p-0">
+        <div id="logo" class="col-7 col-md-2 p-0">
             <a href="../index.html" class="navbar-brand">
                 <img width="100%" src="rsc/logo/logo.png" alt="ATS Logo" />
             </a>
@@ -94,7 +95,6 @@
             </ul>
         </div>
     </nav>
-
     <!-- Animación -->
     <script>AOS.init();</script>
 
@@ -103,13 +103,17 @@
     <div class="container-fluid p-0">
 
         <div id="carouselExampleControls" class="carousel slide p-0" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="rsc/home/carousel/banner1.jpg" class="d-block w-100" alt="...">
-
+            <div class="carousel-inner align-content-center">
+                <div class="carousel-item active p-5 justify-content-center" id="it1">
+                    <h1>The solution of your <span class="orange">tax business</span></h1>
+                    <h2 class="text-center text-white">Access Your 2023 ATS Tax Software Today</h2>
                 </div>
-                <div class="carousel-item">
-                    <img src="rsc/home/carousel/banner2.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-item p-5 justify-content-center" id="it2">
+                    <h2 class="text-center text-white font-weight-bold"><span class="orange">Be part of a
+                        </span>friendly, knowledgeable,
+                        depedable, diverse and
+                        responsive<span class="orange"> team</span>
+                    </h2>
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -122,24 +126,24 @@
             </a>
         </div>
 
-        <h1 class="m-0 my-5" style="color:#489cbd">Our offer</h1>
+        <h1 class="m-0 my-5 header-index">Our offer</h1>
 
-        <div class="row p-5 m-0" id="banner1" data-aos="fade-right">
-            <div class="col-6 contenido">
-                <h2 class="mb-4" id="titulo-b1"></h2>
-                <div id="cont-b1" class="d-none"></div>
+        <div class="row p-4 pr-5 p-md-5 m-0" id="banner1" data-aos="fade-right">
+            <div class="col-8 col-md-6 contenido">
+                <h2 class="mb-md-4" id="titulo-b1"></h2>
+                <div id="cont-b1" class="d-none d-md-flex flex-column"></div>
             </div>
         </div>
-        <div class="row p-5 m-0" id="banner2" data-aos="fade-right">
-            <div class="col-6 contenido">
-                <h2 class="mb-4" id="titulo-b2"></h2>
-                <div id="cont-b2" class="d-none"></div>
+        <div class="row p-4 pr-5 p-md-5 m-0" id="banner2" data-aos="fade-right">
+            <div class="col-8 col-md-6 contenido">
+                <h2 class="mb-md-4" id="titulo-b2"></h2>
+                <div id="cont-b2" class="d-none  d-md-flex flex-column"></div>
             </div>
         </div>
-        <div class="row p-5 m-0" id="banner3" data-aos="fade-right">
-            <div class="col-6 contenido">
-                <h2 class="mb-4" id="titulo-b3"></h2>
-                <div id="cont-b3" class="d-none"></div>
+        <div class="row p-4 pr-5 p-md-5 m-0" id="banner3" data-aos="fade-right">
+            <div class="col-8 col-md-8 contenido">
+                <h2 class="mb-md-4" id="titulo-b3"></h2>
+                <div id="cont-b3" class="d-none d-md-flex flex-column"></div>
             </div>
         </div>
 
@@ -228,11 +232,13 @@
 </html>
 
 <style>
+    .header-index {
+        color: #489cbd;
+    }
+
     .titulo {
         font-size: 3em;
     }
-
-
 
     #banner1 {
         background-image: url(rsc/home/banner1.jpg);
@@ -249,6 +255,18 @@
         background-size: cover;
     }
 
+    #it1 {
+        background-image: url(rsc/home/carousel/banner1.jpg);
+        background-size: cover;
+        min-height: 60vh;
+    }
+
+    #it2 {
+        background-image: url(rsc/home/carousel/banner2.jpg);
+        background-size: cover;
+        min-height: 60vh;
+    }
+
     .contenido {
         color: white;
         font-size: 16pt;
@@ -257,5 +275,21 @@
     .contenido h2 {
         font-weight: bold;
         font-size: xx-large;
+    }
+
+    @media (max-width: 400px) {
+        .header-index {
+            font-size: 3em;
+        }
+
+        #titulo-b3,
+        #titulo-b2,
+        #titulo-b1 {
+            font-size: 0.9em;
+        }
+
+        .titulo {
+            font-size: 2.2em;
+        }
     }
 </style>
